# exchange-changelog

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  generate_prompt.py  main.py  pyproject.toml  result.md  result_skip_empty.md
.github/workflows/: cron-dev.yml  cron.yml  docker-cron.yml  docker.yml  gist-dev.yml  python.yml
changelog_helper/: chain.py  config.py  gemini.py  llm.py  slack.py  utils.py
changelog_helper/loaders/: html.py
changelog_helper/tools/: __init__.py  changelog.py  changelog_gemini.py  changelog_gpt.py
config/: default.yaml  dev.yaml  openai.yaml
examples/: avalanchego_hardfork.ipynb  binance_spot_example.ipynb
exchange_changelog/: changelog.py  config.py  html.py  redis.py  slack.py  utils.py
exchange_changelog/llm/: __init__.py  gemini.py  openai.py
exchange_changelog/loaders/: __init__.py  html.py
exchange_changelog/tools/: __init__.py  changelog.py  changelog_gemini.py  llm.py  upcoming_changes.py
src/exchange_changelog/: __init__.py  app.py  changelog.py  cli.py  config.py  html.py  lazy.py  openai.py  redis.py  scraper.py  slack.py  utils.py
src/exchange_changelog/llm/: __init__.py
src/exchange_changelog/loaders/: __init__.py  cloudscraper.py  httpx.py  loader.py  pipeline.py  playwright.py  singlefile.py  utils.py
src/exchangechangelog/: __init__.py  changelog.py  config.py  redis.py  slack.py
tests/: test_config.py  test_html.py
