[tool.poetry]
name = "exchange-changelog"
version = "0.1.0"
description = ""
authors = ["narumi <toucans-cutouts0f@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
httpx = "^0.27.2"
click = "^8.1.7"
openai = "^1.52.0"
pydantic = "^2.9.2"
google-generativeai = "^0.8.3"
markdownify = "^0.13.1"
pyyaml = "^6.0.2"
slack-sdk = "^3.33.1"
gradio = "^5.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
types-beautifulsoup4 = "^4.12.0.20240907"
types-pyyaml = "^6.0.12.20240917"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
