[project]
name = "exchange-changelog"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "gradio>=5.3.0",
    "httpx>=0.27.2",
    "loguru>=0.7.2",
    "markdownify>=0.13.1",
    "openai>=1.52.2",
    "playwright>=1.48.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "redis>=5.1.1",
    "slack-sdk>=3.33.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "types-pyyaml>=6.0.12.20240917",
    "types-pyopenssl>=24.1.0.20240722",
    "types-requests>=2.32.0.20241016",
    "jupyter>=1.1.1",
]

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
