[project]
name = "exchange-changelog"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click==8.1.8",
    "cloudscraper>=1.2.71",
    "httpx>=0.27.2",
    "kabigon[playwright]>=0.8.8",
    "logfire>=3.15.1",
    "loguru>=0.7.2",
    "markdownify>=0.13.1",
    "nest-asyncio>=1.6.0",
    "openai-agents>=0.0.14",
    "playwright>=1.48.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "redis>=5.2.0",
    "slack-sdk>=3.33.1",
    "typer>=0.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "types-pyyaml>=6.0.12.20240917",
    "types-pyopenssl>=24.1.0.20240722",
    "types-requests>=2.32.0.20241016",
    "jupyter>=1.1.1",
    "feedparser>=6.0.11",
    "pip>=24.3.1",
    "types-decorator>=5.1.8.20240310",
    "types-six>=1.17.0.20241205",
    "types-aiofiles>=24.1.0.20250326",
    "types-pytz>=2025.2.0.20250326",
    "types-simplejson>=3.20.0.20250326",
    "types-ujson>=5.10.0.20250326",
    "types-redis>=4.6.0.20241004",
    "chainlit>=2.5.5",
]

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
